# now-broken-comp-test

./: spin.toml
comppp/: Cargo.toml
comppp/src/: lib.rs
comppp/wit/: world.wit
mangled-wit/: world2.wit
nonstarter/: Cargo.toml
nonstarter/src/: lib.rs
nonstarter/wit/: world.wit
